# polymarket-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  next-step.md  pyproject.toml
Ressources/: Threads_twitter  ressources_to_download.txt
alpha-intelligence/: CLAUDE.md
configs/: default.yaml
dashboard/: CLAUDE.md  Dockerfile  README.md  app.py
deploy/: polybot-polycop.service  polybot-watchdog.service
docs/: architecture.md  backtesting.md  claude-code-operating-model.md  dashboard.md  data-layer.md  data-validation.md  equity-monitoring.md  evaluation-layer.md  execution-quality.md  kill-switch.md  live-execution-foundation.md  live-readiness.md  live-risk.md  metrics-layer.md  micro-live.md  monitoring.md  n8n-research-workflows.md  n8n.md  next-steps.md  obsidian-reporting.md  obsidian-strategy-mining.md  obsidian.md  oms.md  paper-trading-validation.md  paper-trading.md  pipeline-validation.md  recommendations.md  research-layer.md  shadow-trading.md  sources-reviewed.md  strategy-candidate-registry.md  telegram.md  wallet-integration.md  websocket-layer.md
execution-engine/: CLAUDE.md
external-agents/: README.md
n8n/: README.md
obsidian-vault/: README.md
resources/: README.md  thread_wallets.json
scripts/: analyze_twitter_edges.py  collect_markets.py  collect_orderbooks.py  collect_trades.py  collect_weather_station_observations.py  compute_market_metrics.py  deposit_usdc.py  discover_weather_markets.py  dump_wallet_activity.py  fix_queue.py  gcp_deploy.sh  generate_obsidian_note.py  health_check.sh  import_agents_git.py  notify.py  (+41 more)
(+426 files in other folders)
