[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Research, automation, and execution infrastructure for a Polymarket trading system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13",
  "asyncpg>=0.29",
  "beautifulsoup4>=4.12",
  "fastapi>=0.115",
  "httpx>=0.27",
  "openai>=1.40",
  "pgvector>=0.3",
  "prometheus-client>=0.20",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-json-logger>=2.0",
  "PyYAML>=6.0",
  "redis>=5.0",
  "SQLAlchemy>=2.0",
  "structlog>=24.0",
  "uvicorn[standard]>=0.30",
  "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
]
research = [
  "duckdb>=1.0",
  "jupyter>=1.0",
  "numpy>=2.0",
  "pandas>=2.2",
  "polars>=1.0",
  "scikit-learn>=1.5",
]
dashboard = [
  "streamlit>=1.40",
  "pandas>=2.2",
]
automation = [
  "telethon>=1.36",
  "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/polybot"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "SIM", "TCH"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
packages = ["polybot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
